Bug 128597 - fails to copy a Mixed Mode CD
Summary: fails to copy a Mixed Mode CD
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-06-04 06:25 UTC by Francois Marier
Modified: 2006-06-04 13:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francois Marier 2006-06-04 06:25:53 UTC
Version:           0.12.15 (using KDE KDE 3.5.3)
Installed from:    Debian testing/unstable Packages
OS:                Linux

The following bug was reported by Christian Frommeyer <christian.frommeyer@stud.uni-karlsruhe.de> on the Debian bug tracker (http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=367494):

I just tried to copy a mixed mode cd (i.e. two sessions first session audio
second session data) with k3b. I did the following:
 - klick on "Copy CD"
 - unchecked "remove Image"
 - clicked "burn"
(labels are in german here so this is what I think they are in english)

After flawlessly reading the original cd and writing all the audio tracks
k3b aborts with error message.

I found the problem using the log. This is what I found:

-----
Fixating...
Fixating time:    8.476s
/usr/bin/cdrecord: fifo had 4779 puts and 4779 gets.
/usr/bin/cdrecord: fifo was 0 times empty and 2928 times full, min fill was
90%.
/usr/bin/cdrecord: CD-Text needs -dao, -raw96r or -raw96p.
Text len: 144
-----

Well cdrecord obviously was invoked with wrong parameters. This is the call
as presented in the log (I stripped the first as it finished well):

/usr/bin/cdrecord.mmap -v gracetime=2 dev=/dev/hda speed=16 -tao
driveropts=burnfree textfile=/tmp/kde-chrisf/k3b12MOec.dat -eject -multi
-xa1 /tmp/kde-chrisf/k3bCdCopy0/Track08.iso

As one can percive k3b wants to write cd-text data for the data-track as
well. There is no sense in doing so and of course cdrecord doesn't support
it.
Comment 1 Sebastian Trueg 2006-06-04 13:29:14 UTC
Why do you strip the debugging output? This way I cannot help you.
Comment 2 Sebastian Trueg 2006-06-04 13:29:34 UTC
ok, well, maybe we don't need the full debugging output after all....
Comment 3 Sebastian Trueg 2006-06-04 13:38:01 UTC
SVN commit 547993 by trueg:

Clear CD-Text for writing data sessions.

BUG: 128597


 M  +1 -0      ChangeLog  
 M  +3 -0      libk3b/jobs/k3bcdcopyjob.cpp  


--- branches/stable/extragear/multimedia/k3b/ChangeLog #547992:547993
@@ -4,6 +4,7 @@
  * Always force 44.1khz in the Lame MP3 encoder plugin.
  * Fixed VideoDVD creation on rewritable media.
  * NetBSD support (thanks to Mark Davies).
+ * Fixed Copy of Enhanced Audio CDs with CD-Text
 
 0.12.15
 =======
--- branches/stable/extragear/multimedia/k3b/libk3b/jobs/k3bcdcopyjob.cpp #547992:547993
@@ -923,6 +923,9 @@
       d->cdrecordWriter->addArgument( d->imageNames[d->toc.count()-1] );
     else
       d->cdrecordWriter->addArgument( d->imageNames[d->currentWrittenSession-1] );
+
+    // clear cd text from previous sessions
+    d->cdrecordWriter->setRawCdText( QByteArray() );
   }