Clear CD-Text for writing data sessions.

BUG: 128597

svn path=/branches/stable/extragear/multimedia/k3b/; revision=547993